# fastapi-base

./: README.md  env.example  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: health.py  users.py
app/core/: config.py  lifespan.py  security.py
app/db/: session.py
app/models/: user.py
app/repositories/: user.py
app/schemas/: user.py
app/services/: user.py
tests/: test_health.py
